# mcp-motherduck-medicair

./: JobsPydantic.py  Mcp.md  README.md  pyproject.toml  server.json
public/: query-results-widget.html  query-results-widget.js
src/mcp_server_medicair/: __init__.py  database.py  prompt.py  server.py
